image shadow issue fixed on safari

--- a/public/user/assets/css/asim.css
+++ b/public/user/assets/css/asim.css
@@ -455,7 +455,8 @@
 #designinnerModal .designer-sec-1::after{
     content: "";
     position: absolute;
-    background: linear-gradient(360deg, rgba(255, 255, 255, 100%), transparent) !important;
+    background: linear-gradient(360deg, rgba(255, 255, 255, 100%), rgba(255, 255, 255, 0)) !important;
+    /* background: linear-gradient(360deg, rgba(255, 255, 255, 100%), transparent) !important; */
     /* background: -webkit-linear-gradient(360deg, rgba(255, 255, 255, 100%), transparent) !important; */
     background-repeat: no-repeat;
     top: 320px;
@@ -464,6 +465,7 @@
     width: 100%;
     height: 130px;
     z-index: -1;
+
 }
 
 #userRequestModal .modal-header {
